@@ -10,6 +10,7 @@ November 17, 2012
 * wasn't checking soon enough for rule redef; now it sets a dead flag in
   AST so no more walking dup.
   error(51): T.g:7:0: rule s redefinition (ignoring); previous at line 3
+* fixed: undefined rule refs caused exception
 
 November 11, 2012
 
